--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ python_version = "3.9"
 strict = true
 ignore_missing_imports = true
 disallow_untyped_decorators = false
+exclude = ["^build/"]
 
 [[tool.mypy.overrides]]
 module = ["example"]
