--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: codecov/codecov-action@v3
         with:
           files: coverage.xml
-          fail_ci_if_error: true
+          fail_ci_if_error: false
       - name: Publish to PyPI
         if: startsWith(github.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@release/v1
