--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,17 @@ jobs:
         with:
           files: coverage.xml
           fail_ci_if_error: false
-      - name: Publish to PyPI
+      - name: Upgrade pip and install build tools
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install build twine
+
+      - name: Build sdist and wheel
+        run: |
+          python -m build
+          twine check dist/*
+
+      - name: Publish to PyPI (Trusted Publishing via OIDC)
         uses: pypa/gh-action-pypi-publish@release/v1
+
+          
