--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches: [main]
   workflow_dispatch:   
+  
+permissions:
+  contents: read
+  id-token: write  # REQUIRED for OIDC Trusted Publishing
 
 jobs:
   build:
