--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Type check
         run: mypy .
       - name: Test
-        run: pytest --cov=prompt_to_json --cov-report=xml
+        run: python -m pytest -p pytest_cov --cov=prompt_to_json --cov-report=term-missing --cov-report=xml
       - name: Upload coverage
         uses: codecov/codecov-action@v3
         with:
